--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
 security.basic.enabled=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=nikitokdr@gmail.com
+spring.mail.password=fhlgnyxcdobsfnsn
+spring.mail.port=587
+spring.mail.protocol=smtps
+mail.debug=true
