--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
 security.basic.enabled=false
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=nikitokdr@gmail.com
-spring.mail.password=fhlgnyxcdobsfnsn
-spring.mail.port=587
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=nikitadecoder@yandex.ru
+spring.mail.password=jfdhurrhqnxvzxgz
+spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
