--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/Auction
+spring.datasource.url=jdbc:mariadb://localhost:3306/auction_demo
 spring.datasource.username=root
-spring.datasource.password=qazwsx
+spring.datasource.password=1111
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
